--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,16 +1,25 @@
 @import "bulma/css/bulma.css";
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;600&family=Montserrat:wght@500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;600&family=Inter:wght@700&family=Montserrat:wght@500;700&display=swap");
 
 :root {
     --font-primary: "Montserrat", sans-serif;
     --font-secondary: "Fira Sans", sans-serif;
+    --font-tertiary: "Inter", sans-serif;
+
+
+    --font-black-color: #000000;
+    --font-white-color: #ffffff;
+    --font-gray-color: #B2B2B2;
 
     --main-bg-color: #f6f6f6;
-    
-    --font-black-color: #000000;
+    --dark-bg-color: #272727;
+    --aqua-color: #00f0ff;
+
+    --card-dark-color: #3d3d3d;
+    --card-box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.5);
+
     --link-hover-color: #0df;
     --container-width: 94rem;
-
 }
 
 body {
@@ -27,10 +36,15 @@ a:hover {
 }
 
 .main-bg {
-  background-color: var(--main-bg-color);
+    background-color: var(--main-bg-color);
 }
 
-.myContainer {
+.dark-bg {
+    background-color: var(--dark-bg-color);
+}
+
+.my-container {
     max-width: var(--container-width);
     margin: 0 auto;
+    padding: 0 2rem;
 }
