--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,17 +1,19 @@
 @import "bulma/css/bulma.css";
-@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;600&family=Inter:wght@700&family=Montserrat:wght@500;700&family=Quicksand:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;600&family=Inter:wght@700&family=Jost:wght@600&family=Montserrat:wght@500;700&family=Quicksand:wght@500&display=swap');
 
 :root {
     --font-primary: "Montserrat", sans-serif;
     --font-secondary: "Fira Sans", sans-serif;
     --font-3: "Inter", sans-serif;
     --font-4: "Quicksand", sans-serif;
+    --font-5: "Jost", sans-serif;
 
     --font-black-color: #000000;
     --font-white-color: #ffffff;
     --font-gray-color: #b2b2b2;
     --font-gray2-color: #c4c4c4;
     --font-dark-gray-color: #3d3d3d;
+    --font-input-color: #4E4E4E;
 
     --light-bg-color: #f6f6f6;
     --dark-bg-color: #272727;
@@ -54,4 +56,8 @@ a:hover {
 
 .height-100 {
     height: 100%;
+}
+
+.width-100 {
+    width: 100%;
 }
